acvus-mir-test/tests/snapshots/e2e__boolean_not.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 |   r0 = undef
     1 |   r1 = undef
     2 |   r2 = fetch @flag
     3 |   r3 = !r2
     5 |   r4 = call #0(r3)
     6 |   r5 = string_concat [T0, r4]
     7 |   commit @flag = r2
     8 |   return r5

    ; r0 (v11) : Bool
    ; r1 (v12) : Bool
    ; r2 (@flag) : Bool
    ; r3 (v4) : Bool
    ; r4 (to_string(...)) : String
    ; r5 (v9) : String
    ; r6 (x) : Bool
    ; r7 (@flag) : Bool
    ; r8 (v10) : Bool
    ; r9 (v6) : String
    ; r10 (@flag) : Bool
