acvus-mir-test/tests/snapshots/e2e__builtin_any.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 |   r0 = undef
     1 |   r1 = undef
     2 |   r2 = fetch @items
     4 |   r3 = list []
     5 |   r4 = call #0(r3)
     7 |   r5 = call #1(r2)
     8 |   r6 = closure L0 []
     9 |   r7 = call #2(r5, r6)
    10 |   r8 = call #3(r7)
    11 |   r9 = string_concat [T0, T0, r8]
    12 |   commit @items = r4
    13 |   return r9

    ; r0 (v16) : List<Int>
    ; r1 (v17) : List<Int>
    ; r2 (@items) : List<Int>
    ; r3 (v6) : Array<Int, 0>
    ; r4 (list(...)) : List<Int>
    ; r5 (v10) : Iterator<Int, Pure, #IdentityId(2)>
    ; r6 (v11) : Fn(&Int) -> Bool
    ; r7 (any(...)) : Bool
    ; r8 (to_string(...)) : String
    ; r9 (v14) : String
    ; r10 (@items) : List<Int>
    ; r11 (items) : List<Int>
    ; r12 (@items) : List<Int>
    ; r13 (v15) : List<Int>
    ; r14 (v5) : String
    ; r15 (v8) : String

=== closure L0 (ValueId(0)) ===
     0 |   r0 = undef
     1 |   r1 = take (*r2)
     3 |   r3 = r1 > 10 (r4)
     4 |   return r3

    ; r0 (v7) : &Int
    ; r1 (v4) : Int
    ; r2 (v1) : &Int
    ; r3 (v6) : Bool
    ; r4 (v5) : Int
    ; r5 (x) : &Int
