acvus-mir-test/tests/snapshots/e2e__builtin_contains.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     1 |   r0 = ref @items
     2 |   r1 = load r0
     3 |   r2 = call #0(r1)
     5 |   r3 = call #1(r2, 3 (r4))
     6 |   r5 = call #2(r3)
     7 |   r6 = T0 + r5
     8 |   return r6

    ; r0 (@items) : Ref<Array<Int, 3>>
    ; r1 (v3) : Array<Int, 3>
    ; r2 (v4) : Iterator<Int, Pure, #IdentityId(1)>
    ; r3 (contains(...)) : Bool
    ; r4 (v5) : Int
    ; r5 (to_string(...)) : String
    ; r6 (v8) : String
    ; r7 (v1) : String
