acvus-mir-test/tests/snapshots/e2e__builtin_join.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""
  T1 = ", "

=== main ===
     0 |   r0 = undef
     1 |   r1 = undef
     2 |   r2 = fetch @names
     4 |   r3 = list []
     5 |   r4 = call #0(r3)
     7 |   r5 = call #1(r2)
     8 |   r6 = const_str T1
     9 |   r7 = call #2(r6)
    10 |   r8 = call #3(r5, r7)
    11 |   r9 = string_concat [T0, T0, r8]
    12 |   commit @names = r4
    13 |   return r9

    ; r0 (v16) : Vec<String>
    ; r1 (v17) : Vec<String>
    ; r2 (@names) : Vec<String>
    ; r3 (v6) : Array<String, 0>
    ; r4 (vec(...)) : Vec<String>
    ; r5 (v10) : Iterator<String, Pure, #IdentityId(1)>
    ; r6 (v11) : &str
    ; r7 (to_string(...)) : String
    ; r8 (join(...)) : String
    ; r9 (v14) : String
    ; r10 (@names) : Vec<String>
    ; r11 (names) : Vec<String>
    ; r12 (@names) : Vec<String>
    ; r13 (names) : Vec<String>
    ; r14 (v15) : Vec<String>
    ; r15 (v5) : String
    ; r16 (v8) : String
