acvus-mir-test/tests/snapshots/e2e__builtin_len.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 |   r0 = undef
     1 |   r1 = undef
     2 |   r2 = fetch @items
     4 |   r3 = list []
     5 |   r4 = call #0(r3)
     7 |   r5 = call #1(r2)
     8 |   r6 = call #2(r5)
     9 |   r7 = string_concat [T0, T0, r6]
    10 |   commit @items = r4
    11 |   return r7

    ; r0 (v14) : List<Int>
    ; r1 (v15) : List<Int>
    ; r2 (@items) : List<Int>
    ; r3 (v6) : Array<Int, 0>
    ; r4 (list(...)) : List<Int>
    ; r5 (len(...)) : Int
    ; r6 (to_string(...)) : String
    ; r7 (v12) : String
    ; r8 (@items) : List<Int>
    ; r9 (items) : List<Int>
    ; r10 (v13) : List<Int>
    ; r11 (v5) : String
    ; r12 (@items) : List<Int>
    ; r13 (v8) : String
