acvus-mir-test/tests/snapshots/e2e__catch_all_with_binding.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = "admin"
  T1 = "guest"
  T2 = ""

=== main ===
     0 |   r0 = undef
     1 |   r1 = undef
     2 |   r2 = fetch @role
     3 | L2:
     4 |   r3 = string_clone r2
     5 |   r4 = test r3 == "admin"
     6 |   jump_if r4 then L3 else L1
     7 | L3:
     9 |   r5 = string_concat [T0]
    10 |   r6 = string_clone r5
    11 |   jump L0(r6, r1)
    12 | L1:
    15 |   r7 = string_clone T1
    16 |   r8 = string_concat [T2, r7]
    17 |   r9 = string_clone r8
    18 |   jump L0(r9, T1)
    19 | L0(r10: String, r11: String):  ; merge_of L2
    20 |   r12 = string_concat [r10]
    21 |   commit @role = r2
    22 |   return r12

    ; r0 (v15) : String
    ; r1 (v16) : String
    ; r2 (@role) : String
    ; r3 (v19) : String
    ; r4 (v4) : Bool
    ; r5 (v6) : String
    ; r6 (v20) : String
    ; r7 (v21) : String
    ; r8 (v11) : String
    ; r9 (v22) : String
    ; r10 (v12) : String
    ; r11 (v18) : String
    ; r12 (v13) : String
    ; r13 (@role) : String
    ; r14 (v14) : String
    ; r15 (v17) : String
    ; r16 (v9) : String
    ; r17 (v7) : String
    ; r18 (fallback) : String
    ; r19 (@role) : String
    ; r20 (v5) : String
